2007-04-18  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (real_dir_from_tilde): Simplify.
	* winio.c (parse_kbinput): Interpret Cancel and Shift-Cancel.
	* winio.c (get_escape_seq_kbinput): Add missing comments.

2007-04-17  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (real_dir_from_tilde): Fix long-standing problem,
	found by Justin Fletcher, where directory names that began with
	"~", but that weren't users' home directories, could be
	erroneously treated as users' home directories (e.g. "~d/" would
	be treated as "~daemon/").
	* files.c (input_tab): Don't bother checking if num_matches is
	less than zero, as it's a size_t and hence unsigned.

2007-04-16  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (real_dir_from_tilde): Fix segfault, found by Justin
	Fletcher, when dealing with directory names that begin with "~",
	but that aren't users' home directories.

2007-04-11  Mike Frysinger  <vapier@gentoo.org>

	* doc/syntax/asm.nanorc, doc/syntax/c.nanorc,
	doc/syntax/sh.nanorc: Copy the regex that highlights trailing
	whitespace (with minor tweaks by David Lawrence Ramsey) from
	doc/syntax/java.nanorc to these files, as it's also useful in
	them.

2007-04-04  David Lawrence Ramsey  <pooka109@gmail.com>

	* AUTHORS, faq.html: Update email address.
	* winio.c (get_escape_seq_kbinput): Add escape sequences for
	Terminal.

2007-02-01  Benno Schulenberg  <bensberg@justemail.net>

	* global.c (shortcut_init): Reword the movement shortcut
	descriptions so that they use "Go to" instead of "Move to",
	since not all of them move the cursor in the same way.
	* global.c (shortcut_init): Reword the paragraph movement
	shortcut descriptions to more accurately describe how they work.
	* nano.c (usage): Reword the description of the -S/--smooth
	command line option in order to differentiate it from the
	associated toggle description.

2007-01-29  David Lawrence Ramsey  <pooka109@cox.net>

	* ChangeLog: Rework the 2.1 branch's changelog to be more